--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <h1 class="mv-ttl">ここにタイトルここにタイトル</h1>
               <!-- <h1 class="mv-ttl">コーディング、WordPressの<br class="br-tab" />お仕事お受けします。</h1> -->
               <div class="mv-txtarea">
-                <p class="mv-txt">はじめまして、私は都内を中心にフリー<br class="br-sp" />で活動しているWebエンジニアです。</p>
+                <p class="mv-txt">コーディング、WordPress制作を<br class="br-sp" />行っているフリーのWebエンジニアです。</p>
                 <p class="mv-txt">迅速な対応と丁寧なコミュニケーションを心がけています。</p>
               </div>
               <div class="btn btn--contact">
@@ -114,6 +114,7 @@
                 </tr>
               </tbody>
             </table>
+            <p class="price__txt">※詳しい費用や納期については、お問い合わせの際にご確認させていただきます。</p>
           </div>
 
           <!-- 対応可能時間 -->
@@ -121,12 +122,6 @@
             <h3 class="biz-hour__ttl">対応可能時間</h3>
             <table class="table table--biz-hour">
               <tbody class="table__body">
-                <!-- <thead class="table-thead">
-                  <tr class="table-tr">
-                    <th class="table-th">日にち</th>
-                    <th class="table-th">時間</th>
-                  </tr>
-                </thead> -->
                 <tr class="table__tr">
                   <th class="table__th">平日</th>
 
@@ -140,6 +135,7 @@
                 </tr>
               </tbody>
             </table>
+            <p class="biz-hour__txt">※月の稼働は60時間程度です。</p>
           </div>
         </div>
       </section>
