--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/style.css" />
     <!-- Font Awesome -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
     <!-- Google font -->
@@ -12,22 +11,49 @@
     <!-- owl.carousel -->
     <link rel="stylesheet" href="./css/owl.carousel.min.css" />
     <!-- Drawer -->
-    <link rel="stylesheet" href="./css/drawer.min.css" />
+    <!-- <link rel="stylesheet" href="./css/drawer.min.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css" />
+
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="shortcut icon" href="favicon.ico" />
     <title>ポートフォリオ</title>
   </head>
-  <body>
-    <header class="header">
+  <body class="drawer drawer--right">
+    <!-- drawer.js -->
+    <div role="banner">
+      <button type="button" class="drawer-toggle drawer-hamburger">
+        <span class="sr-only">toggle navigation</span>
+        <span class="drawer-hamburger-icon"></span>
+      </button>
+      <nav class="drawer-nav" role="navigation">
+        <ul class="drawer-menu">
+          <li><a class="drawer-brand" href="#">メニュー</a></li>
+          <li><a class="drawer-menu-item" href="#header">トップ</a></li>
+          <li><a class="drawer-menu-item" href="#service">できること</a></li>
+          <li><a class="drawer-menu-item" href="#profile">プロフィール</a></li>
+          <li><a class="drawer-menu-item" href="#works">制作物</a></li>
+          <li><a class="drawer-menu-item" href="#contact">お問い合わせ</a></li>
+          <li>
+            <div class="sns sns--header">
+              <a href="#" class="sns__link"><i class="fab fa-twitter"></i></a>
+              <a href="https://github.com/afternoon20" class="sns__link" target="blank"><i class="fab fa-github"></i></a>
+              <a href="https://codepen.io/takocheese" class="sns__link" target="blank"><i class="fab fa-codepen"></i></a>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <header id="header" class="header">
       <div class="inner">
         <div class="header-wrapper">
-          <h1 class="header-logo">東京都で活動しているフリーランスのWEBエンジニア</h1>
+          <h1 class="header-logo">LOGO</h1>
           <nav class="header-nav">
             <ul class="header-nav__list">
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">TOP</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">SERVICE</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">PROFILE</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">WORKS</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">CONTACT</a></li>
+              <li class="header-nav__list-item"><a href="#header" class="header-nav__list-link">トップ</a></li>
+              <li class="header-nav__list-item"><a href="#service" class="header-nav__list-link">できること</a></li>
+              <li class="header-nav__list-item"><a href="#profile" class="header-nav__list-link">プロフィール</a></li>
+              <li class="header-nav__list-item"><a href="#works" class="header-nav__list-link">制作物</a></li>
+              <li class="header-nav__list-item"><a href="#contact" class="header-nav__list-link">お問い合わせ</a></li>
             </ul>
           </nav>
         </div>
@@ -43,7 +69,7 @@
               <!-- <h1 class="mv-ttl">コーディング、WordPressの<br class="br-tab" />お仕事お受けします。</h1> -->
               <div class="mv-txtarea">
                 <p class="mv-txt">コーディング、WordPress制作を<br class="br-sp" />行っているフリーのWebエンジニアです。</p>
-                <p class="mv-txt">迅速な対応と丁寧なコミュニケーションを心がけています。</p>
+                <p class="mv-txt">機能の追加や細かい修正にも柔軟に対応いたします。</p>
               </div>
               <div class="btn btn--contact">
                 <a href="#" class="btn__txt">お問い合わせ</a>
@@ -114,28 +140,7 @@
                 </tr>
               </tbody>
             </table>
-            <p class="price__txt">※詳しい費用や納期については、お問い合わせの際にご確認させていただきます。</p>
-          </div>
-
-          <!-- 対応可能時間 -->
-          <div class="biz-hour">
-            <h3 class="biz-hour__ttl">対応可能時間</h3>
-            <table class="table table--biz-hour">
-              <tbody class="table__body">
-                <tr class="table__tr">
-                  <th class="table__th">平日</th>
-
-                  <td class="table__td">
-                    6:00～9:00 / 20:00～23:00
-                  </td>
-                </tr>
-                <tr class="table__tr">
-                  <th class="table__th">土日・祝日</th>
-                  <td class="table__td">9:00～22:00</td>
-                </tr>
-              </tbody>
-            </table>
-            <p class="biz-hour__txt">※月の稼働は60時間程度です。</p>
+            <p class="price__txt">※詳しい費用や納期については、お問い合わせの際にご確認ください。</p>
           </div>
         </div>
       </section>
@@ -278,6 +283,10 @@
                 </li>
               </ul>
             </div>
+            <blockquote class="skill__quote">
+              引用：
+              <a href="https://svgporn.com/" class="skill__quote-link" target="blank">SVG PORN</a>
+            </blockquote>
           </div>
         </div>
       </section>
@@ -330,7 +339,6 @@
           </div>
         </div>
       </section>
-
       <!-- お問い合わせ -->
       <section id="contact" class="contact">
         <div class="inner">
@@ -354,9 +362,33 @@
             </button>
           </form>
           <p class="contact__txt">※メールやSNSからのお問い合わせも受け付けております。</p>
+          <!-- 対応可能時間 -->
+          <div class="biz-hour">
+            <h3 class="biz-hour__ttl">対応可能時間</h3>
+            <table class="table table--biz-hour">
+              <tbody class="table__body">
+                <tr class="table__tr">
+                  <th class="table__th">平日</th>
+                  <td class="table__td">
+                    6:00～9:00 / 20:00～23:00
+                  </td>
+                </tr>
+                <tr class="table__tr">
+                  <th class="table__th">土日・祝日</th>
+                  <td class="table__td">9:00～22:00</td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- <p class="biz-hour__txt">※月の稼働は60時間程度です。</p> -->
+          </div>
         </div>
       </section>
     </main>
+    <!-- トップへ戻る -->
+    <!-- <div id="page-top">
+      <i class="fas fa-angle-up"></i>
+    </div> -->
+
     <footer class="footer">
       <div class="inner">
         <p class="footer__txt">©Copyright2020 .All Rights Reserved.</p>
@@ -366,9 +398,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- owl.carousel -->
-    <script src="js/drawer.min.js"></script>
-    <script src="js/iscoll.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+
+    <!-- jquery & iScroll -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
+    <!-- drawer.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
+    <!-- <script src="js/drawer.min.js"></script>
+    <script src="js/iscoll.js"></script> -->
+
     <script src="js/script.js"></script>
   </body>
 </html>
