--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:title" content="ポートフォリオ" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="ポートフォリオです。" />
+    <meta property="og:url" content="https://afternoon20.github.io/portfolio/index.html" />
+    <meta property="og:site_name" content="ポートフォリオ" />
+    <meta property="og:image" content="img/dist/no-image.png" />
     <!-- Font Awesome -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
     <!-- Google font -->
@@ -32,7 +38,7 @@
           <li><a class="drawer-menu-item" href="#service">できること</a></li>
           <li><a class="drawer-menu-item" href="#profile">プロフィール</a></li>
           <li><a class="drawer-menu-item" href="#works">制作物</a></li>
-          <li><a class="drawer-menu-item" href="#contact">お問い合わせ</a></li>
+          <li><a class="drawer-menu-item drawer-menu-item--contact" href="#contact">お問い合わせ</a></li>
           <li>
             <div class="sns sns--header">
               <a href="#" class="sns__link"><i class="fab fa-twitter"></i></a>
@@ -72,7 +78,7 @@
                 <p class="mv-txt">機能の追加や細かい修正にも柔軟に対応いたします。</p>
               </div>
               <div class="btn btn--contact">
-                <a href="#" class="btn__txt">お問い合わせ</a>
+                <a href="#contact" class="btn__txt">お問い合わせ</a>
               </div>
             </div>
           </div>
