--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="ポートフォリオです。" />
     <meta property="og:url" content="https://afternoon20.github.io/portfolio/index.html" />
     <meta property="og:site_name" content="ポートフォリオ" />
-    <meta property="og:image" content="img/dist/no-image.png" />
+    <meta property="og:image" content="https://afternoon20.github.io/portfolio/img/dist/no-image.png" />
     <!-- Font Awesome -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
     <!-- Google font -->
