[add] type.js追加

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header id="header" class="header">
       <div class="inner">
         <div class="header-wrapper">
-          <h1 class="header-logo">LOGO</h1>
+          <h1 class="header-logo"></h1>
           <nav class="header-nav">
             <ul class="header-nav__list">
               <li class="header-nav__list-item"><a href="#header" class="header-nav__list-link">トップ</a></li>
@@ -71,10 +71,12 @@
         <div class="inner">
           <div class="mv-table">
             <div class="mv-table-cell">
-              <h1 class="mv-ttl">ここにタイトルここにタイトル</h1>
-              <!-- <h1 class="mv-ttl">コーディング、WordPressの<br class="br-tab" />お仕事お受けします。</h1> -->
+              <h1 class="mv-ttl">
+                I am
+                <em class="mv-ttl--typed"></em>
+              </h1>
               <div class="mv-txtarea">
-                <p class="mv-txt">コーディング、WordPress制作を<br class="br-sp" />行っているフリーのWebエンジニアです。</p>
+                <p class="mv-txt">フリーランスでコーディング、<br class="br-sp" />WordPress制作をしています。</p>
                 <p class="mv-txt">機能の追加や細かい修正にも柔軟に対応いたします。</p>
               </div>
               <div class="btn btn--contact">
@@ -314,7 +316,7 @@
                 </div>
               </div>
             </div>
-            <div class="works-list__item">
+            <!-- <div class="works-list__item">
               <img src="img/dist/no-image.png" alt="画像なし" class="works-list__img" />
               <div class="works-list__disc">
                 <h3 class="works-list__ttl">コーポレートサイト(サンプル)</h3>
@@ -326,9 +328,9 @@
                   <a href="http://overslepts.starfree.jp/" class="works-list__link-txt" target="blank">サイトを見る<i class="fas fa-external-link-alt"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="works-list__item">
-              <img src="img/dist/no-image.png" alt="画像なし" class="works-list__img" />
+              <img src="img/dist/portfolio.png" alt="ポートフォリオ" class="works-list__img" />
               <div class="works-list__disc">
                 <h3 class="works-list__ttl">ポートフォリオサイト</h3>
                 <p class="works-list__txt">
@@ -410,6 +412,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
     <!-- drawer.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
+    <!-- Typed.js -->
+    <!-- <script src="js/typed.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <!-- <script src="js/drawer.min.js"></script>
     <script src="js/iscoll.js"></script> -->
 
