--- a/index.html
+++ b/index.html
@@ -377,9 +377,7 @@
               <tbody class="table__body">
                 <tr class="table__tr">
                   <th class="table__th">平日</th>
-                  <td class="table__td">
-                    6:00～9:00 / 20:00～23:00
-                  </td>
+                  <td class="table__td">6:00～9:00 / <br class="br-sp" />20:00～23:00</td>
                 </tr>
                 <tr class="table__tr">
                   <th class="table__th">土日・祝日</th>
