--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <em class="mv-ttl--typed"></em>
               </h1>
               <div class="mv-txtarea">
-                <p class="mv-txt">フリーランスでコーディング、<br class="br-sp" />WordPress制作をしています。</p>
+                <p class="mv-txt">フリーランスとして、コーディングや<br class="br-sp" />WordPress制作をしています。</p>
                 <p class="mv-txt">機能の追加や細かい修正にも柔軟に対応いたします。</p>
               </div>
               <div class="btn btn--contact">
