--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta property="og:title" content="ポートフォリオ" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="ポートフォリオです。" />
+    <meta
+      property="og:description"
+      content="ポフリーランスとして、コーディングやWordPress制作をしています。機能の追加や細かい修正にも柔軟に対応いたします。ートフォリオです。"
+    />
     <meta property="og:url" content="https://afternoon20.github.io/portfolio/index.html" />
     <meta property="og:site_name" content="ポートフォリオ" />
-    <meta property="og:image" content="https://afternoon20.github.io/portfolio/img/dist/no-image.png" />
+    <meta property="og:image" content="https://afternoon20.github.io/portfolio/img/dist/portfolio.png" />
     <!-- Font Awesome -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
     <!-- Google font -->
