--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <!-- Drawer -->
     <!-- <link rel="stylesheet" href="./css/drawer.min.css" /> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css" />
-
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="shortcut icon" href="favicon.ico" />
     <title>ポートフォリオ</title>
@@ -173,7 +172,7 @@
               <p class="profile-textarea__txt">1994年生まれ。<br class="br-sp" />群馬県出身で東京都在住。</p>
               <p class="profile-textarea__txt">
                 大学卒業後、SES企業に就職しJavaプログラマーとしてアプリケーション開発に携わる。
-                現在は、会計事務所でシステム担当・経理職として働きながら、フリーのWEBエンジニアとしても活動している。
+                現在は、会計事務所でシステム担当・経理職として働きながら、フリーランスとしても活動している。
               </p>
             </div>
           </div>
@@ -214,14 +213,15 @@
               <div class="career-list__item">
                 <h4 class="career-list__item-top">
                   <div class="career-list__item-year">2018年</div>
-                  <div class="career-list__item-name">会計事務所に税務・会計スタッフ、<br class="br-sp" />システム担当として勤務</div>
+                  <div class="career-list__item-name">会計事務所に経理職、システム担当として勤務</div>
                 </h4>
                 <div class="career-list__item-bottom">
                   <div class="career-list__item-content">
                     <div class="career-list__item-ttl-wrapper">
                       <div class="career-list__item-ttl">[1]税務・会計業務</div>
                     </div>
-                    <p class="career-list__item-txt">個々に説明</p>
+                    <p class="career-list__item-txt">法人税、消費税等の申告書作成業務や、税務に関する各種届出の作成および申請。</p>
+                    <p class="career-list__item-txt">記帳代行、支払代行や月次決算資料の作成といったクライアントの経理アウトソーシング。</p>
                   </div>
                   <div class="career-list__item-content">
                     <div class="career-list__item-ttl-wrapper">
@@ -345,7 +345,7 @@
           </div>
           <div class="works-btn">
             <a href="https://drive.google.com/drive/folders/1e_sqyZnynZpcdZREUjGHpUhz_QzdMd3S" class="btn btn--works" target="blank">
-              <p class="btn__txt">さらに制作物を見る</p>
+              <p class="btn__txt">さらに制作物を見る<i class="fas fa-external-link-alt"></i></p>
             </a>
           </div>
         </div>
