--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta property="og:title" content="ポートフォリオ" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:description"
-      content="フリーランスとして、コーディングやWordPress制作をしています。機能の追加や細かい修正にも柔軟に対応いたします。ートフォリオです。"
-    />
+    <meta property="og:description" content="ポートフォリオ" />
     <meta property="og:url" content="https://afternoon20.github.io/portfolio/index.html" />
     <meta property="og:site_name" content="ポートフォリオ" />
     <meta property="og:image" content="https://afternoon20.github.io/portfolio/img/dist/portfolio.png" />
@@ -21,6 +18,7 @@
     <link rel="stylesheet" href="./css/owl.carousel.min.css" />
     <!-- Drawer -->
     <!-- <link rel="stylesheet" href="./css/drawer.min.css" /> -->
+    <link rel="stylesheet" href="./css/animate.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="shortcut icon" href="favicon.ico" />
@@ -83,7 +81,7 @@
         </div>
       </section>
       <!-- プロフィール -->
-      <section id="profile" class="profile">
+      <section id="profile" class="profile wow fadeInLeft">
         <div class="inner">
           <h2 class="profile-ttl">プロフィール</h2>
           <div class="profile-list">
@@ -107,7 +105,7 @@
         </div>
       </section>
       <!-- キャリア -->
-      <section id="career" class="career">
+      <section id="career" class="caree wow fadeInLeft">
         <div class="inner">
           <h2 class="career__ttl">キャリア</h2>
           <ul class="timeline">
@@ -208,7 +206,7 @@
         </div>
       </section>
       <!-- スキル -->
-      <section id="skill" class="skill">
+      <section id="skill" class="skill wow fadeInLeft">
         <div class="inner">
           <h2 class="skill__ttl">スキル</h2>
           <ul class="skill-list">
@@ -347,7 +345,7 @@
         </div>
       </section>
       <!-- 制作物 -->
-      <section id="works" class="works">
+      <section id="works" class="works wow fadeInLeft">
         <div class="inner">
           <h2 class="works-ttl">制作物</h2>
           <div class="works-list">
@@ -473,6 +471,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
     <!-- Typed.js -->
     <!-- <script src="js/typed.js"></script> -->
+    <script src="js/wow.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <!-- <script src="js/drawer.min.js"></script>
     <script src="js/iscoll.js"></script> -->
