リンク修正

--- a/index.html
+++ b/index.html
@@ -384,9 +384,7 @@
                   <span class="cat-list__item">WordPress</span>
                 </div>
                 <div class="works-list__link">
-                  <a href="https://maihama-university.herokuapp.com/" class="works-list__link-txt" target="blank"
-                    >サイトを見る<i class="fas fa-external-link-alt"></i>
-                  </a>
+                  <a href="http://xd162417.wp.xdomain.jp" class="works-list__link-txt" target="blank">サイトを見る<i class="fas fa-external-link-alt"></i> </a>
                 </div>
               </div>
             </div>
