リンク修正

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
               <img src="img/dist/work04.png" alt="isara.life模写制作LP" class="works-list__img" />
               <div class="works-list__disc">
                 <h3 class="works-list__ttl">
-                  isara.life模写制作LP<a class="works-list__git" href=""><i class="fab fa-github"></i></a>
+                  isara.life模写制作LP<a class="works-list__git" href="https://github.com/afternoon20/isara"><i class="fab fa-github"></i></a>
                 </h3>
                 <p class="works-list__txt">
                   エンジニア育成講座「<a class="works-list__txt--link" href="https://isara.life/" target="blank"
