--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                   <span class="timeline__date">2017.03</span>
                   <h3 class="timeline__ttl">外国語学部ドイツ語学科　卒業</h3>
                 </div>
-                <div class="timeline-body">
+                <!-- <div class="timeline-body">
                   <p class="timeline-body__txt">魔女をテーマに、魔女狩りやグリム童話を中心に歴史上の魔女の扱われ方を研究していました。</p>
-                </div>
+                </div> -->
               </div>
             </li>
             <li class="timeline__item timeline__item--right">
@@ -342,6 +342,7 @@
               </table>
             </li>
           </ul>
+          <p class="skill__txt">※理解度はあくまで個人的な見解です。</p>
         </div>
       </section>
       <!-- 制作物 -->
@@ -408,11 +409,10 @@
               <img src="img/dist/work04.png" alt="isara.life模写制作LP" class="works-list__img" />
               <div class="works-list__disc">
                 <h3 class="works-list__ttl">
-                  isara.life模写制作LP<a class="works-list__git" href="https://github.com/afternoon20/isara"><i class="fab fa-github"></i></a>
+                  isara.life模写制作LP<a class="works-list__git" href="https://github.com/afternoon20/isara" target="blank"><i class="fab fa-github"></i></a>
                 </h3>
                 <p class="works-list__txt">
-                  エンジニア育成講座「<a class="works-list__txt--link" href="https://isara.life/" target="blank"
-                    >iSara<i class="fas fa-external-link-alt"></i></a
+                  エンジニア育成講座「<a class="works-list__txt--link" href="https://isara.life/" target="blank">iSara<i class="fas fa-external-link-alt"></i></a
                   >」の模写制作を行いました。パーフェクトピクセルでコーディングし、CSS設計にBEMを取り入れました。
                 </p>
                 <div class="cat-list">
