制作物修正

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
               <p class="profile__txt">1994年生まれ。群馬県出身で東京都在住。</p>
               <p class="profile__txt">
-                外国語学部卒業後、大学事務として留学生支援を担当。その後、SES企業に転職し、Javaプログラマーとして開発業務に携わりました。現在は税理士法人にて、経理スタッフと社内ITを担当しています。プログラミングやIT技術が好きで、PHP,Laravelを勉強中です。
+                外国語学部卒業後、大学事務として留学生支援を担当。その後、SES企業に転職し、Javaプログラマーとして開発業務に携わりました。現在は税理士法人にて、経理スタッフと社内ITを担当しています。プログラミングやIT技術が好きで、現在はPHP,Laravelを勉強中。
               </p>
             </div>
           </div>
@@ -116,9 +116,6 @@
                   <span class="timeline__date">2017.03</span>
                   <h3 class="timeline__ttl">外国語学部ドイツ語学科　卒業</h3>
                 </div>
-                <!-- <div class="timeline-body">
-                  <p class="timeline-body__txt">魔女をテーマに、魔女狩りやグリム童話を中心に歴史上の魔女の扱われ方を研究していました。</p>
-                </div> -->
               </div>
             </li>
             <li class="timeline__item timeline__item--right">
@@ -350,6 +347,25 @@
         <div class="inner">
           <h2 class="works-ttl">制作物</h2>
           <div class="works-list">
+            <div class="works-list__item">
+              <img src="img/dist/work05.png" alt="Laravel-bbs | LaravelとMaterializeを使った掲示板" class="works-list__img" />
+              <div class="works-list__disc">
+                <h3 class="works-list__ttl">
+                  掲示板デモサイト<a class="works-list__git" href="https://evening-reaches-36084.herokuapp.com/" target="blank"><i class="fab fa-github"></i></a>
+                </h3>
+                <p class="works-list__txt">Laravelを使用した掲示板デモサイトです。CSSフレームにはMaterializeを使用しています。</p>
+                <div class="cat-list">
+                  <span class="cat-list__item">PHP</span>
+                  <span class="cat-list__item">Laravel</span>
+                  <span class="cat-list__item">Heroku</span>
+                </div>
+                <div class="works-list__link">
+                  <a href="https://maihama-university.herokuapp.com/" class="works-list__link-txt" target="blank"
+                    >サイトを見る<i class="fas fa-external-link-alt"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
             <div class="works-list__item">
               <img src="img/dist/work01.png" alt="資料請求 | 舞浜大学 HAIMAHA UNIVERSITY" class="works-list__img" />
               <div class="works-list__disc">
