--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="profile-list-top">
               <div class="profile-img"></div>
               <div class="sns">
-                <a href="#" class="sns__link"><i class="fab fa-twitter"></i></a>
+                <!-- <a href="#" class="sns__link"><i class="fab fa-twitter"></i></a> -->
                 <a href="https://github.com/afternoon20" class="sns__link" target="blank"><i class="fab fa-github"></i></a>
                 <a href="https://codepen.io/takocheese" class="sns__link" target="blank"><i class="fab fa-codepen"></i></a>
               </div>
@@ -351,16 +351,17 @@
               <img src="img/dist/work05.png" alt="Laravel-bbs | LaravelとMaterializeを使った掲示板" class="works-list__img" />
               <div class="works-list__disc">
                 <h3 class="works-list__ttl">
-                  掲示板デモサイト<a class="works-list__git" href="https://evening-reaches-36084.herokuapp.com/" target="blank"><i class="fab fa-github"></i></a>
+                  掲示板デモサイト<a class="works-list__git" href="https://github.com/afternoon20/laravel-bbs" target="blank"><i class="fab fa-github"></i></a>
                 </h3>
                 <p class="works-list__txt">Laravelを使用した掲示板デモサイトです。CSSフレームにはMaterializeを使用しています。</p>
                 <div class="cat-list">
                   <span class="cat-list__item">PHP</span>
                   <span class="cat-list__item">Laravel</span>
                   <span class="cat-list__item">Heroku</span>
+                  <span class="cat-list__item">Materialize</span>
                 </div>
                 <div class="works-list__link">
-                  <a href="https://maihama-university.herokuapp.com/" class="works-list__link-txt" target="blank"
+                  <a href="https://evening-reaches-36084.herokuapp.com/" class="works-list__link-txt" target="blank"
                     >サイトを見る<i class="fas fa-external-link-alt"></i>
                   </a>
                 </div>
@@ -377,6 +378,8 @@
                   <span class="cat-list__item">PHP</span>
                   <span class="cat-list__item">Laravel</span>
                   <span class="cat-list__item">Gmail</span>
+                  <span class="cat-list__item">Heroku</span>
+                  <span class="cat-list__item">Bootstrap4</span>
                 </div>
                 <div class="works-list__link">
                   <a href="https://maihama-university.herokuapp.com/" class="works-list__link-txt" target="blank"
@@ -428,7 +431,8 @@
                   isara.life模写制作LP<a class="works-list__git" href="https://github.com/afternoon20/isara" target="blank"><i class="fab fa-github"></i></a>
                 </h3>
                 <p class="works-list__txt">
-                  エンジニア育成講座「<a class="works-list__txt--link" href="https://isara.life/" target="blank">iSara<i class="fas fa-external-link-alt"></i></a
+                  エンジニア育成講座「<a class="works-list__txt--link" href="https://isara.life/" target="blank"
+                    >iSara<i class="fas fa-external-link-alt"></i></a
                   >」の模写制作を行いました。パーフェクトピクセルでコーディングし、CSS設計にBEMを取り入れました。
                 </p>
                 <div class="cat-list">
